--- a/app/src/main/res/layout/view_template_image_tweet.xml
+++ b/app/src/main/res/layout/view_template_image_tweet.xml
@@ -18,7 +18,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvTweetTextWithImage"/>
+            android:id="@+id/tvTweetTextWithImage"
+            android:autoLink="all"
+            android:linksClickable="true"
+            />
 
         <ImageView
             android:layout_width="wrap_content"
