--- a/app/src/main/res/layout/view_template_textonly_tweet.xml
+++ b/app/src/main/res/layout/view_template_textonly_tweet.xml
@@ -18,6 +18,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvTweetTextOnly"/>
+            android:id="@+id/tvTweetTextOnly"
+            android:autoLink="all"
+            android:linksClickable="true"
+            />
     </LinearLayout>
 </LinearLayout>
