--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.shrikant.mytwitter.TimelineActivity">
+    tools:context="com.shrikant.mytwitter.TweetDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_timeline" />
+    <include layout="@layout/content_tweet_detail" />
 
 </android.support.design.widget.CoordinatorLayout>
