--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.shrikant.mytwitter.TimelineActivity"
-    tools:showIn="@layout/activity_timeline">
+    tools:showIn="@layout/activity_timeline"
+    android:background="@color/white">
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,7 +23,7 @@
             android:id="@+id/rvTweets"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/material_grey"/>
+            android:background="@color/white"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
