--- a/app/src/main/res/layout/view_template_textonly_tweet.xml
+++ b/app/src/main/res/layout/view_template_textonly_tweet.xml
@@ -21,6 +21,13 @@
             android:id="@+id/tvTweetTextOnly"
             android:autoLink="all"
             android:linksClickable="true"
+            android:background="@color/white"
+
             />
     </LinearLayout>
 </LinearLayout>
+
+<!--
+            android:autoLink="all"
+            android:linksClickable="true"
+-->
