--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="material_grey">#eeeeee</color>
+    <color name="white">#FFFFFF</color>
+    <color name="twitter_blue">#00aced</color>
 </resources>
