--- a/app/src/main/res/layout/view_profile_holder.xml
+++ b/app/src/main/res/layout/view_profile_holder.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:id="@+id/ivProfileImage"/>
+        android:id="@+id/ivProfileImage"
+        android:onClick="showProfile"/>
 
     <TextView
         android:layout_width="match_parent"
