--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -2,10 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!--
     <item
         android:id="@+id/miCompose"
         android:icon="@mipmap/ic_tweet"
         app:showAsAction="always"
-        android:title="Compose">
+        android:title="@string/compose">
     </item>
+    -->
+    <item
+        android:id="@+id/userProfile"
+        app:showAsAction="ifRoom"
+        android:title="@string/profile"
+        android:icon="@drawable/ic_profile"
+        android:onClick="onProfileClick"/>
 </menu>
