required compose fab

--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -23,4 +23,14 @@
 
     <include layout="@layout/content_timeline" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        app:fabSize="normal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/twitter_blue"
+        android:src="@android:drawable/ic_menu_edit" />
+
 </android.support.design.widget.CoordinatorLayout>
