--- a/app/src/main/res/layout/view_tweet_footer.xml
+++ b/app/src/main/res/layout/view_tweet_footer.xml
@@ -1,5 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="wrap_content" android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/ivReplyToTweet"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/ic_reply_gray"
+        android:onClick="replyToTweet"/>
+
+    <!--ImageView
+        android:layout_width="@dimen/iconSize"
+        android:layout_height="@dimen/iconSize"
+        android:id="@+id/ivRetweet"
+        android:src="@drawable/ic_retweet"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" /-->
+
+    <TextView
+        android:id="@+id/tvRetweets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:text="15" />
+
+    <ImageView
+        android:id="@+id/ivRetweet"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_toRightOf="@id/ivReplyToTweet"
+        android:src="@drawable/ic_retweet_gray"
+        android:layout_marginLeft="80dp"/>
+
+    <TextView
+        android:id="@+id/tvLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:text="15" />
+
+    <ImageView
+        android:id="@+id/ivLike"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/tvLikes"
+        android:layout_toStartOf="@id/tvLikes"
+        android:src="@drawable/ic_like_gray" />
 
 </RelativeLayout>
