--- a/app/src/main/res/layout/content_timeline.xml
+++ b/app/src/main/res/layout/content_timeline.xml
@@ -14,7 +14,13 @@ android:orientation="vertical">
     android:id="@+id/sliding_tabs"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:tabMode="scrollable" />
+    app:tabGravity="fill"
+    android:background="@color/white"
+    android:elevation="12sp"
+    app:tabTextColor="@color/colorPrimary"
+    app:tabIndicatorHeight="4dp"
+    app:tabIndicatorColor="@color/colorPrimary"
+    app:tabMode="fixed" />
 
 <android.support.v4.view.ViewPager
     android:id="@+id/viewpager"
