--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+        <color name="colorPrimaryDark">#1c6399</color>
+-->
+    <color name="colorPrimary">#57adee</color>
+    <color name="colorPrimaryDark">#1c6399</color>
+    <color name="colorAccent">#536DFE</color>
+    <color name="colorTransparent">#00FFFFFF</color>
+
     <color name="material_grey">#eeeeee</color>
     <color name="white">#FFFFFF</color>
     <color name="twitter_blue">#00aced</color>
