--- a/app/src/main/res/layout/fragment_userinfo_header.xml
+++ b/app/src/main/res/layout/fragment_userinfo_header.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
     
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rlUserProfileInfo">
+        android:id="@+id/rlUserProfileInfo"
+        android:paddingBottom="2dp">
 
+        <FrameLayout
+            android:id="@+id/flProfileImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:id="@+id/ivUserProfileBackgroundImage"
+                android:src="@drawable/striped"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/ivUserProfileImage"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="70dp"
+                android:src="@android:drawable/screen_background_light_transparent"/>
+        </FrameLayout>
+<!--
         <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
@@ -16,14 +40,16 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:src="@android:drawable/screen_background_light_transparent"/>
-    
+    -->
         <TextView
             android:id="@+id/tvUserFullName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/ivUserProfileImage"
+            android:layout_below="@id/flProfileImage"
             android:text="@string/name"
-            android:textSize="16sp"/>
+            android:paddingLeft="4dp"
+            android:textSize="14sp"
+            android:textStyle="bold"/>
     
         <TextView
             android:id="@+id/tvUserTagLine"
@@ -32,14 +58,17 @@
             android:layout_alignLeft="@id/tvUserFullName"
             android:layout_below="@id/tvUserFullName"
             android:text="@string/tagline"
-            android:textSize="12sp"/>
+            android:paddingLeft="4dp"
+            android:textSize="12sp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            />
 
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:layout_below="@id/rlUserProfileInfo">
     
@@ -48,6 +77,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvProfileFollowers"
             android:text="@string/user_profile_followers"
+            android:paddingLeft="4dp"
             android:onClick="showFollowers"/>
 
         <TextView
@@ -57,7 +87,6 @@
             android:text="@string/user_profile_following"
             android:layout_marginLeft="20dp"
             android:onClick="showFollowing"/>
-
     </LinearLayout>
 
 </RelativeLayout>
